--- a/service2/Dockerfile
+++ b/service2/Dockerfile
@@ -15,5 +15,5 @@ COPY . .
 EXPOSE 3002
  
 # Run application
-#CMD ["node", "index.js"]
-CMD ["sleep", "infinity"]
+CMD ["node", "index.js"]
+#CMD ["sleep", "infinity"]
