--- a/service1/Dockerfile
+++ b/service1/Dockerfile
@@ -15,5 +15,5 @@ COPY . .
 EXPOSE 3001
  
 # Run application
-#CMD ["node", "index.js"]
-CMD ["sleep", "infinity"]
+CMD ["node", "index.js"]
+#CMD ["sleep", "infinity"]
